# PyServal

./: pyproject.toml
Luna/: .crates.toml  .crates2.json
SERVAL/controllers/: __init__.py  serval_control.py
SERVAL/core/: command_server.py  data_types.py  pipeline.py  stats_reporter.py  tcp_receiver.py  utils.py
SERVAL/core/extractors/: jit_functions.py  parallel_processor.py
SERVAL/core/workers/: __init__.py  extractor.py  reader.py  savers.py
SERVAL/gui/: __init__.py  acquisition_gui.py  histogram_controller.py  image_dock_widget.py  log_dock.py  pipeline_status_dock.py  pipeline_thread.py  roi_manager.py  tof_histogram_dock.py
SERVAL/hardware/: __init__.py
SERVAL/io/: __init__.py  loader.py
SERVAL/manual/: TimeExtension.txt
SERVAL/postprocessing/: centroiding.py  centroiding_gui.py  dbscan_main.cpp
SERVAL/pymodaq_plugin/: daq_0dviewer_tpx3serval.py
SERVAL/resources/: build_icons.py  icons.toml
SERVAL/resources/material_icons/resources/: icons_rounded_20.py  icons_rounded_40.py
SERVAL/utils/: __init__.py  event_bus.py  logging.py
tests/: test_command_server.py  test_recording_state.py  test_savers.py
